modules/gdscript/tests/scripts/analyzer/errors/use_value_of_void_function_builtin_method.gd
func test():
	var builtin := []
	print(builtin.reverse()) # Built-in type method.
